# nextage-robot-wave-demo

./: README.md
wave_demo/: CMakeLists.txt  package.xml
wave_demo/launch/: debug.launch  demo.launch  robot.launch  ueye.launch
wave_demo/resources/: ik.rviz  nextage_ik.xml  nextage_ompl.xml
wave_demo/scripts/: detect  ik_outputter  wave  wavedemo
