<?xml version="1.0"?>
<package format="2">
  <name>wave_demo</name>
  <version>0.0.0</version>
  <description>The wave_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="matt@todo.todo">matt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>exotica_python</build_depend>
  <build_depend>exotica_examples</build_depend>
  <build_depend>nextagea_description</build_depend>
  <build_depend>nextagea_moveit_config</build_depend>
  <build_export_depend>exotica_python</build_export_depend>
  <build_export_depend>exotica_examples</build_export_depend>
  <build_export_depend>nextagea_description</build_export_depend>
  <build_export_depend>nextagea_moveit_config</build_export_depend>
  <exec_depend>exotica_python</exec_depend>
  <exec_depend>exotica_examples</exec_depend>
  <exec_depend>nextagea_description</exec_depend>
  <exec_depend>nextagea_moveit_config</exec_depend>

</package>
