<?xml version="1.0"?>
<package format="2">
  <name>Nextage_Wave_Demo</name>
  <version>0.1.0</version>
  <description>Nextage_Wave_Demo package</description>

  <maintainer email="theraspberrypiguy@gmail.com">Matt Timmons-Brown, The University of Edinburgh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>exotica_python</build_depend>
  <build_depend>exotica_examples</build_depend>
  <build_depend>nextagea_description</build_depend>
  <build_depend>nextagea_moveit_config</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>exotica_python</build_export_depend>
  <build_export_depend>exotica_examples</build_export_depend>
  <build_export_depend>nextagea_description</build_export_depend>
  <build_export_depend>nextagea_moveit_config</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>exotica_python</exec_depend>
  <exec_depend>exotica_examples</exec_depend>
  <exec_depend>nextagea_description</exec_depend>
  <exec_depend>nextagea_moveit_config</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
